[package]
name = "bevy_vinox_pixel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "bevy"]
repository = "https://github.com/vixeliz/bevy_vinox_pixel"
homepage = "https://github.com/vixeliz/bevy_vinox_pixel"
readme = "README.md"
description = "A package for creating pixel games in bevy"
exclude = [
    "assets/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
